[project]
name = "semantic-chunking"
version = "0.1.0"
description = "Semantic chunking demo app for report-writing RAG"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "streamlit>=1.40.0",
  "duckdb>=1.1.3",
  "langchain-openai>=0.2.0",
  "langchain-core>=0.3.0",
]

[tool.poetry]
name = "semantic-chunking"
version = "0.1.0"
description = "Semantic chunking demo app for report-writing RAG"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = ">=1.40.0"
duckdb = ">=1.1.3"
langchain-openai = ">=0.2.0"
langchain-core = ">=0.3.0"
